# Lexon

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  sync_and_test.sh
examples/: CMakeLists.txt  README.md  lit.cfg.py  lit.site.cfg.py.in
examples/BudDialect/: bud-array-attr.mlir  bud-constant.mlir  bud-inline-interface.mlir  bud-print.mlir  bud-str-attr.mlir  makefile
examples/ConvOpt/: CMakeLists.txt  edge-detection.cpp
examples/DAPDialect/: CMakeLists.txt  FIRLowpass.cpp  FIRVectorization.cpp  IIRLowpass.cpp  IIRVectorization.cpp  RFFT.cpp  WhisperPreprocess.cpp  biquad.cpp
examples/DIPDialect/: CMakeLists.txt  DIPAll.cpp  OpenCVAll.cpp  correlation2D.cpp  correlationFFT2D.cpp  morph2D.cpp  resize2D.cpp  resize4D_nchw.cpp  resize4D_nhwc.cpp  rotation2D.cpp  rotation4D.cpp
examples/DLModel/: makefile
examples/FrontendGen/: makefile
examples/GemminiDialect/: batch_matmul.mlir  ciface.mlir  compute-accumulated.mlir  conv_2d_nchw_fchw_f32.mlir  conv_2d_nchw_fchw_i8.mlir  conv_2d_nhwc_hwcf_f32.mlir  conv_2d_nhwc_hwcf_i8.mlir  makefile  matmul-os.mlir  matmul-ws.mlir  matmul.mlir  matrix-add-scale.mlir  matrix-add.mlir  mvin-mvout.mlir  performance-test.cpp  tile-conv-igelu.mlir  tile-conv-layernorm.mlir  tile-conv-relu.mlir  tile-conv-softmax.mlir  tile-conv.mlir  tile-matmul-os.mlir  tile-matmul-ws-igelu.mlir  tile-matmul-ws-layernorm.mlir  tile-matmul-ws-relu.mlir  tile-matmul-ws-softmax.mlir  tile-matmul.mlir  tile-rect-conv.mlir  transpose.mlir
examples/LexonBert/: CMakeLists.txt  README.md  bert-main.cpp  import-bert.py
examples/LexonConvolution/: conv2d-nhwc-fhwc-opt.mlir  conv2d-nhwc-fhwc.mlir  conv2d.mlir  makefile
examples/LexonDeepSeekR1/: CMakeLists.txt  README.md  import-deepseek-r1.py  lexon-deepseek-r1-bf16-main.cpp  lexon-deepseek-r1-cli.cpp  lexon-deepseek-r1-f16-main.cpp  lexon-deepseek-r1-main.cpp  vocab.txt
examples/LexonGPU/: README.md  makefile  transform.mlir
examples/LexonGraph/: README.md  import-dynamo-break.py
examples/LexonJIT/: README.md  pytorch_matrix_multiplication.py
examples/LexonLeNet/: CMakeLists.txt  README.md  lexon-lenet-import.py  lexon-lenet-main.cpp  makefile
examples/LexonLlama/: CMakeLists.txt  README.md  import-llama2.py  llama-main.cpp
examples/LexonMatmul/: batchmatmul-vectorization.mlir  linalg-batchmatmul-f32.mlir  linalg-bf16-matmul.mlir  linalg-to-amx-example.mlir  linalg-transpose-batchmatmul-b.mlir  linalg-transpose-matmul-b-f32.mlir  makefile  transpose-batchmatmul-b-vec.mlir
examples/LexonMobileNetV3/: CMakeLists.txt  README.md  lexon-mobilenetv3-import.py  lexon-mobilenetv3-main.cpp
examples/LexonNext/: README.md  makefile  next-attention-fusion.mlir  next-attention-loop.mlir  next-attention.mlir  next-batchmatmul-decode-size.mlir  next-batchmatmul-sgemm-unroll-vec.mlir  next-blis-matmul.mlir  next-compass.mlir  next-eliminate-add-zero.mlir  next-eliminate-identity.mlir  next-embedding.mlir  next-ffn-no-reshape.mlir  next-ffn-no-transpose.mlir  next-ffn-optimized.mlir  next-ffn.mlir  next-flash-attention.mlir  next-linalg-matmul-decode.mlir  next-linalg-matmul.mlir  next-mask.mlir  next-matmul-transpose-op.mlir  next-matmul-transpose.mlir  next-matmul-transpose2-vec.mlir  next-matmul-transpose2.mlir  next-mhsa-context.mlir  next-mhsa-core.mlir  next-mhsa-qkv.mlir  next-mmtb-sgemm-unroll-vec.mlir  next-mmtb.mlir  next-no-reshape.mlir  next-norm.mlir  next-output.mlir  next-positional-encoding.mlir  next-reshape.mlir  next-rope.mlir  next-sgemm-unroll-vec-aligned.mlir  next-sgemm-unroll-vec-fixed.mlir  next-sgemm-unroll-vec-scalable.mlir  next-sgemm.mlir  next-sigmoid.mlir  (+6 more)
examples/LexonOneDNN/: CMakeLists.txt  README.md  import_simple_model.py  onednn_ops.h
examples/LexonPython/: README.md  bert.py  module_gen.py
examples/LexonResNet18/: CMakeLists.txt  README.md  import-resnet18.py  lexon-resnet-import.py  lexon-resnet-main.cpp
examples/LexonStableDiffusion/: CMakeLists.txt  README.md  import-stable-diffusion.py  lexon-stable-diffusion-main.cpp  vocab.txt
examples/LexonTransformer/: CMakeLists.txt  README.md  build_and_run_timed.sh  import-transformer.py  transformer_runner.cpp
examples/LexonWhisper/: CMakeLists.txt  README.md  import-whisper.py  vocab.txt  whisper-main.cpp
examples/MLIRAffine/: affine-load.mlir  affine-max.mlir  affine-parallel.mlir  affine-store.mlir  affine-vector.mlir  makefile
examples/MLIRCF/: cf-iteration-exit.mlir  makefile
examples/MLIREmitC/: emitc-include.mlir  makefile
examples/MLIRGPU/: README.md  makefile
examples/MLIRLinalg/: linalg-batch-matmul-dync.mlir  linalg-batch-matmul-f32.mlir  linalg-batch-matmul-i8.mlir  linalg-conv2d.mlir  linalg-conv2d_nchw_fchw.mlir  linalg-conv2d_nhwc_fhwc.mlir  linalg-depthwise_conv_2d_nhwc_hwc.mlir  linalg-generic.mlir  linalg-matmul-opt-f32.mlir  linalg-matmul-opt-i8.mlir  linalg-matmul.mlir  linalg-pooling-nhwc-max.mlir  linalg-transpose-f32.mlir  makefile
examples/MLIRMath/: makefile  math-atan2.mlir  math-rsqrt.mlir
examples/MLIRMemRef/: makefile  memref-dim.mlir  memref-memory.mlir  memref-rank.mlir  memref-reinterpret-cast.mlir  memref-subview.mlir
examples/MLIRPDL/: makefile
examples/MLIRPython/: README.md
examples/MLIRSCF/: makefile  scf-for.mlir  scf-if.mlir  scf-parallel.mlir  scf-while.mlir
examples/MLIRSparseTensor/: sparse-tensor-fuse-tensor-cast.mlir
examples/MLIRTOSA/: makefile
examples/MLIRTensor/: makefile  tensor-collapse-shape.mlir  tensor-extract-slice.mlir  tensor-extract.mlir  tensor-from-elements.mlir  tensor-insert-slice.mlir  tensor-insert.mlir  tensor-print.mlir
examples/MLIRTransform/: makefile
examples/MLIRVector/: makefile  vector-bitcast.mlir  vector-broadcast.mlir  vector-compressstore.mlir  vector-constant-mask.mlir  vector-contract.mlir  vector-create-mask.mlir  vector-expandload.mlir  vector-extract-strided-slice.mlir  vector-extract.mlir  vector-fma-alignment.mlir  vector-fma.mlir  vector-gather.mlir  vector-index-cast.mlir  vector-insert-strided-slice.mlir  vector-insert.mlir  (+16 more)
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
(+327 files in other folders)
